# rusty-bot

./: .envexample  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
.github/workflows/: rust.yml
database/: Cargo.toml
database/src/: guild.rs  lib.rs  log.rs  oauth.rs  playlist.rs  user.rs
database/src/helpers/: mod.rs  snowflake_as_oid.rs  snowflake_vec_as_oids.rs
database/src/types/: mod.rs  snowflake.rs
entities/: Cargo.toml
entities/src/entities/: guild.rs  member.rs  mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240115_222515_add_guild_settings.rs
rusty-bot/: Cargo.toml
rusty-bot/src/: error.rs
rusty-bot/src/checks/: global.rs
rusty-bot/src/commands/: help.rs  mod.rs
rusty-bot/src/commands/audio/: join.rs  play.rs  skip.rs  utils.rs
rusty-bot/src/commands/config/: mod.rs  vc_timeout.rs
rusty-bot/src/logic/: blacklist.rs
rusty-web/: Cargo.toml
rusty-web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
rusty-web/frontend/src/: App.vue
rusty-web/frontend/src/api/: utils.ts
rusty-web/frontend/src/assets/: DiscordLogoBlue.vue  DiscordLogoWhite.vue
rusty-web/frontend/src/components/: DiscordLoginBtn.vue  NavItem.vue  Navbar.vue
rusty-web/frontend/src/router/: index.ts  route_meta.ts
rusty-web/frontend/src/stores/: user.ts
rusty-web/frontend/src/views/: HomeView.vue  LoginView.vue  OauthRedirectView.vue
rusty-web/src/: cors_fairing.rs  main.rs  session_fairing.rs
rusty-web/src/views/: discord_login.rs  mod.rs
rusty-web/templates/: base.html.tera  index.html.tera
src/: error.rs  framework.rs  main.rs  utils.rs
src/checks/: blacklisted.rs  mod.rs
src/commands/: about.rs  blacklist.rs  error.rs  info.rs  mod.rs  ping.rs
src/commands/audio/: leave.rs  mod.rs  play.rs  skip.rs  utils.rs
src/logic/: blacklist.rs  mod.rs  utils.rs
src/tests/: blacklist.rs
