[workspace]
members = [".", "migration", "entities"]




[package]
name = "rusty_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = {path = "migration"}
entities = {path = "entities"}


dotenv = "^0.15"
poise = "0.6.1-rc1"
reqwest = "0.11.23"
serenity = { version = "^0.12", features = ["voice", "model"], default-features = false}
songbird = { git = "https://github.com/serenity-rs/songbird.git", branch="current", features = [ "builtin-queue"]}
symphonia = "0.5.3"
thiserror = "1.0.56"
tokio = { version = "^1.21", features = ["macros", "rt-multi-thread", "sync", "time"]}
tracing = "^0.1"
tracing-futures = "^0.2"
tracing-subscriber = "^0.3"
url = "2.5.0"
sea-orm = { version = "^0.12", features = [ "runtime-tokio-rustls", "macros", "debug-print" ] }
regex = "1.10.2"
sqlx = "0.7.3"
debug_print = "1.0.0"

[dev-dependencies]
sea-orm = { version = "^0.12", features = ["mock"]}


[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
