[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version="2.8.0", features=["tokio-runtime"]}
serde = "1.0.188"
futures = "0.3.28"
tokio = {version="1.35.1", features=["full"]}
