[package]
name = "rusty_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = {path="../database"}
dotenv = "0.15.0"
rocket = "0.5.0"
rocket_dyn_templates = {version="0.1.0", features=["tera"]}
